--- a/Index.html
+++ b/Index.html
@@ -13,115 +13,223 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <nav>
-      <div class="nav-logo">Gavin Telfer</div>
-      <div class="nav-items">
-        <a href="#" class="nav-item">Home</a>
-        <a href="#about" class="nav-item">About</a>
-        <a href="#skills" class="nav-item">Skills</a>
-      </div>
-    </nav>
+    	<nav>
+      		<div class="nav-logo">Gavin Telfer</div>
+      		<div class="nav-items">
+        		<a href="#" class="nav-item">Home</a>
+        		<a href="#about" class="nav-item">About</a>
+        		<a href="#skills" class="nav-item">Skills</a>
+			<a href="#experience" class="nav-item">Experience</a>
+			<a href="#certifications" class="nav-item">Certifications</a>
+			<a href="#qualifications" class="nav-item">Qualifications</a>
+			<a href="#education" class="nav-item">Education</a>
+      		</div>
+    	</nav>
 
-    <section class="home" id="home">
-      <div class="home__data">
-        <h1 class="home__title">
-          Hi,<br />I am <span class="home__title-color">Gavin Telfer</span
-          ><br />
-          AWS Cloud Practitioner Trainee
-        </h1>
-        <h2>Contact</h2>
-        <div class="home__social">
-          <a href="https://www.linkedin.com/in/gavin-telfer-a5209b206/" class="home__social-icon"
-            ><i class="bx bxl-linkedin"></i
-          ></a>
-          <a href="https://github.com/Gavtel" class="home__social-icon"><i class="bx bxl-github"></i></a>
-        </div>
-      </div>
+    	<section class="home" id="home">
+      		<div class="home__data">
+        	<h1 class="home__title">
+          	Hi,<br />I am <span class="home__title-color">Gavin Telfer</span
+          	><br />
+          	AWS Cloud Practitioner Trainee
+        	</h1>
+        	<h2>Contact</h2>
+        	<div class="home__social">
+          	<a href="https://www.linkedin.com/in/gavin-telfer-a5209b206/" class="home__social-icon"
+            	><i class="bx bxl-linkedin"></i
+          	></a>
+          	<a href="https://github.com/Gavtel" class="home__social-icon"><i class="bx bxl-github"></i></a>
+        	</div>
+      		</div>
+    	</section>
 
-    </section>
+    	<!--===== ABOUT =====-->
+    	<section class="about" id="about">
+      		<h2 class="section-title">About</h2>
+      		<div class="about__container">
 
-    <!--===== ABOUT =====-->
-    <section class="about" id="about">
-      <h2 class="section-title">About</h2>
-      <div class="about__container">
+        	<div>
+          	<h2 class="about__subtitle">I'm Gavin</h2>
+          		<p class="about__text">
+            			I am a college graduate with a HND in Software Development, looking for a job in Cloud Computing. During my education, I have demonstrated my skills in team working, problem solving and in design-work for
+				several applications. I have also learned to program in Java and C#, in addition to basic HTML and CSS. During high school, I learned to touch-type,
+				allowing me to type quicker and more efficiently.
+          		</p>
+		  	<p>
+				By working in Cloud Computing, I hope to make use of these skills to the best of my ability and to expand upon the knowledge I have acquired.
+		  	</p>
+        		</div>
+      		</div>
+    	</section>
 
-        <div>
-          <h2 class="about__subtitle">I'm Gavin</h2>
-          <p class="about__text">
-            I am a college graduate with a HND in Software Development, looking for a job in Cloud Computing. During my education, I have demonstrated my skills in team working, problem solving and in design-work for
-			several applications. I have also learned to program in Java and C#, in addition to basic HTML and CSS. During high school, I learned to touch-type,
-			allowing me to type quicker and more efficiently.
-          </p>
-		  <p>
-			By working in Cloud Computing, I hope to make use of these skills to the best of my ability and to expand upon the knowledge I have acquired.
-		  </p>
-        </div>
-      </div>
-    </section>
+    	<!--===== SKILLS =====-->
+    	<section id="skills" class="skills">
+      		<h2 class="section-title">Skills</h2>
+      		<div class="skill-bars">
+        		<div class="bar">
+          			<div class="info">
+            				<span>Java</span>
+          			</div>
+          			<div class="progress-line html">
+            				<span></span>
+          			</div>
+        		</div>
+        		<div class="bar">
+          			<div class="info">
+            				<span>C#</span>
+          			</div>
+          			<div class="progress-line jquery">
+            				<span></span>
+          			</div>
+        		</div>
+        		<div class="bar">
+          			<div class="info">
+            				<span>Python</span>
+          			</div>
+          			<div class="progress-line jquery">
+            				<span></span>
+          			</div>
+			</div>
+        		<div class="bar">
+          			<div class="info">
+            				<span>HTML</span>
+          			</div>
+          			<div class="progress-line css">
+            				<span></span>
+         	 		</div>
+        		</div>
+			<div class="bar">
+          			<div class="info">
+            				<span>CSS</span>
+          			</div>
+          			<div class="progress-line css">
+            				<span></span>
+          			</div>
+        		</div>
+      		</div>
+    	</section>
 
-    <!--===== SKILLS =====-->
-    <section id="skills" class="skills">
-      <h2 class="section-title">Skills</h2>
-      <div class="skill-bars">
-        <div class="bar">
-          <div class="info">
-            <span>Java</span>
-          </div>
-          <div class="progress-line html">
-            <span></span>
-          </div>
-        </div>
-        <div class="bar">
-          <div class="info">
-            <span>C#</span>
-          </div>
-          <div class="progress-line jquery">
-            <span></span>
-          </div>
-        </div>
-        <div class="bar">
-          <div class="info">
-            <span>Python</span>
-          </div>
-          <div class="progress-line jquery">
-            <span></span>
-          </div>
-        </div>
-        <div class="bar">
-          <div class="info">
-            <span>HTML</span>
-          </div>
-          <div class="progress-line css">
-            <span></span>
-          </div>
-        </div>
-		<div class="bar">
-          <div class="info">
-            <span>CSS</span>
-          </div>
-          <div class="progress-line css">
-            <span></span>
-          </div>
-        </div>
-      </div>
-    </section>
+	<!--===== EXPERIENCE =====-->
+   	<section id="experience">
+		<h2 class="section-title">Experience</h2>
+      		<ul class="timeline">
+        	<!-- Item 1 -->
+        	<li>
+          	<div class="direction-r">
+            		<div class="flag-wrapper">
+              		<span class="hexa"></span>
+              		<span class="flag">Ravenswood Primary School: Assistant Teacher.</span>
+              		<span class="time-wrapper"><span class="time">2013</span></span>
+            		</div>
+            		<div class="desc">Non-paid work placement during high school. I was an assistant teacher for Primary 1 and 2 students for a week. By helping them to understand maths and other subjects, I demonstrated my patience
+					and communication skills.</div>
+          	</div>
+        	</li>
+     	 	</ul>
+   	</section>
 
-    <section id="experience">
-      <h2 class="section-title">Experience</h2>
-      <ul class="timeline">
-        <!-- Item 1 -->
-        <li>
-          <div class="direction-r">
-            <div class="flag-wrapper">
-              <span class="hexa"></span>
-              <span class="flag">Ravenswood Primary School: Assistant Teacher.</span>
-              <span class="time-wrapper"><span class="time">2013</span></span>
-            </div>
-            <div class="desc">Non-paid work placement during high school. I was an assistant teacher for Primary 1 and 2 students for a week. By helping them to understand maths and other subjects, I demonstrated my patience
-							and communication skills.</div>
-          </div>
-        </li>
-      </ul>
-    </section>
+   	<!--===== CERTIFICATIONS =====-->
+   	<section id="certifications">
+		<h2 class="section-title">Certifications</h2>
+		<ul class="timeline">
+		<!-- Item 1 -->
+		<li>
+		<div class="direction-r">
+			<div class="flag-wrapper">
+			<span class="hexa"></span>
+			<span class="flag">AWS Cloud Practitioner Certification</span>
+			<span class="time-wrapper"><span class="time">February-April 2021</span></span>
+			</div>
+		</div>
+		</li>
+		</ul>
+    	</section>
+
+   	<!--===== QUALIFICATIONS =====--> 
+   	<section id="qualifications">
+		<h2 class="section-title">Qualifications</h2>
+		<ul class="timeline">
+		<!-- Item 1 -->
+		<li>
+		<div class="direction-r">
+			<div class="flag-wrapper">
+			<span class="hexa"></span>
+			<span class="flag">HND Software Development</span>
+			<span class="time-wrapper"><span class="time">September 2016 - June 2018</span></span>
+			</div>
+			<div class="desc">Course run by City of Glasgow College.</div>
+		</div>
+		</li>
+		<!-- Item 2 -->
+		<li>
+		<div class="direction-r">
+			<div class="flag-wrapper">
+		<span class="hexa"></span>
+			<span class="flag">Higher Computing:B, Higher Admin: B, Higher English: C, Higher Maths: C, National 5 Chemistry: A, National 5 French: B, National 5 Art & Design, National 4 Graphic Communication
+					and National 4 History</span>
+			<span class="time-wrapper"><span class="time">August 2010 - May 2016</span></span>
+			</div>
+			<div class="desc">From time at Abronhill High School and Cumbernauld Academy.</div>
+		</div>
+		</li>
+		</ul>
+	</section>
+
+    	<!--===== EDUCATION =====-->
+    	<section id="education">
+		<h2 class="section-title">Education</h2>
+		<ul class="timeline">
+		<!-- Item 1 -->
+		<li>
+		<div class="direction-r">
+			<div class="flag-wrapper">
+			<span class="hexa"></span>
+			<span class="flag">AWS Cloud Practitioner Course</span>
+			<span class="time-wrapper"><span class="time">February - April 2021</span></span>
+			</div>
+		</div>
+		</li>
+		<!-- Item 2 -->
+		<li>
+		<div class="direction-r">
+			<div class="flag-wrapper">
+			<span class="hexa"></span>
+			<span class="flag">University of the West of Scotland</span>
+			<span class="time-wrapper"><span class="time">September 2018 - August 2020</span></span>
+			</div>
+		</div>
+		</li>
+		<!-- Item 3 -->
+		<li>
+		<div class="direction-r">
+			<div class="flag-wrapper">
+			<span class="hexa"></span>
+			<span class="flag">City of Glasgow College</span>
+			<span class="time-wrapper"><span class="time">September 2016 - June 2018</span></span>
+			</div>
+		</div>
+		</li>
+		<!-- Item 4 -->
+		<li>
+		<div class="direction-r">
+			<div class="flag-wrapper">
+			<span class="hexa"></span>
+			<span class="flag">Cumbernauld Academy</span>
+			<span class="time-wrapper"><span class="time">August 2014 - May 2016</span></span>
+			</div>
+		</div>
+		</li>
+		<!-- Item 5 -->
+		<li>
+		<div class="direction-r">
+			<div class="flag-wrapper">
+			<span class="hexa"></span>
+			<span class="flag">Abronhill High School</span>
+			<span class="time-wrapper"><span class="time">August 2010 - May 2014</span></span>
+			</div>
+		</div>
+		</li>
+		</ul>
+	</section>
   </body>
 </html>
